network/cilium/base-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: core-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
    - name: grpc-listener
      protocol: HTTP
      port: 50051
      allowedRoutes:
        namespaces:
          from: All
    - name: http-listener
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
